룸 목록 표시 / 룸 내 인원 수 표시 기능 코드 작성

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -29,7 +29,10 @@
                 rounded-2xl border-gray-600 border-solid border-4 
                 active:bg-gray-600 w-fit">Enter Room</button>
                 </form>
-
+                <h4 class="text-xl font-semibold">Rooms: </h4>
+                <ul name="exist-rooms">
+                    <!-- rooms -->
+                </ul>
             </div>
             <div id="room" class="m-16">
                 <h3 name="header" class="text-left h-10 font-bold mb-4">default</h3>
